@@ -1,3 +1,9 @@
+2002-04-06  Andrew Cagney  <ac131313@redhat.com>
+
+	* gdbarch.sh (FP_REGNUM, PC_REGNUM, SP_REGNUM): Allow default of
+	-1.  Update comment.
+	* gdbarch.h, gdbarch.c: Re-generate.
+
 2002-04-07  Andreas Schwab  <schwab@suse.de>
 
 	* m68klinux-nat.c (fill_fpregset): Properly pass address of
